# homework_13_web

./: .env  main.py
django_project/: pyproject.toml
django_project/quotes/: manage.py
django_project/quotes/quoteapp/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
django_project/quotes/quoteapp/migrations/: 0001_initial.py
django_project/quotes/quoteapp/templates/quoteapp/: add_author.html  add_quote.html  author_detail.html  base.html  index.html
django_project/quotes/quotes/: settings.py  urls.py
django_project/quotes/users/: forms.py  urls.py  views.py
django_project/quotes/users/templates/users/: login.html  signup.html
postgres-data/base/16384/: 1247  1249  1259  16385  16393  16394  16396  16398  16406  16407  16415  16416  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  5002  (+1 more)
postgres-data/global/: pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_16384.stat  global.stat
src/: pyproject.toml
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: auth.py  contacts.py  users.py
src/routes/: auth.py  contacts.py
src/services/: auth.py  email.py
